# custom-framework

./: Cargo.toml  distribute-dev.sh  distribute.sh
bindings/go/: go.mod  server.go
bindings/go/pkg/module/: constants.go  env_module.go  handle_request_external.go  module_wrapper.go  route_handler.go
bindings/go/pkg/server/: server.go
bindings/java/: settings.gradle
bindings/java/custom_framework/: build.gradle
bindings/java/custom_framework/lib/: libwasmedge_jni_osxarm64.dylib
bindings/java/custom_framework/src/main/java/custom_framework/: Constants.java  EnvModuleWrapper.java  HandleRequestExternal.java  ModuleWrapper.java  RouteHandler.java  Server.java
bindings/java/custom_framework/src/test/java/custom_framework/: ServerTest.java
bindings/rust/: Cargo.toml
bindings/rust/examples/: server.rs
bindings/rust/src/: lib.rs  module_wrapper.rs  server.rs
bindings/rust/src/module_wrapper/: constants.rs  env_module.rs
bindings/rust/src/server/: constants.rs  handle_request_external.rs  routes.rs
examples/go/: .gitignore  go.mod  main.go
examples/java/: .gitignore  README.md  build.gradle  settings.gradle
examples/java/src/main/java/custom_framework/: App.java
examples/java/src/main/java/custom_framework_example/: App.java
examples/node/: index.js  lib.js  package-lock.json  package.json
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
src/: lib.rs
